<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_activity_maintain"
            android:icon="@drawable/ic_maintain"
            android:theme="@style/MyMenuTheme"
            android:title="@string/title_activity_maintain" />
        <item
            android:id="@+id/menu_item_activity_history"
            android:icon="@drawable/ic_history"
            android:theme="@style/MyMenuTheme"
            android:title="@string/title_activity_history" />
        <item
            android:id="@+id/menu_item_activity_log"
            android:icon="@drawable/ic_log"
            android:theme="@style/MyMenuTheme"
            android:title="@string/title_activity_log" />
        <item
            android:id="@+id/menu_item_activity_setting"
            android:icon="@drawable/ic_setting"
            android:theme="@style/MyMenuTheme"
            android:title="@string/title_activity_setting" />
        <item
            android:id="@+id/menu_item_activity_about"
            android:icon="@drawable/nav_task"
            android:theme="@style/MyMenuTheme"
            android:title="@string/title_activity_about" />
    </group>
</menu>